Navbar overlap correction
Some elements were overlapping the navbar when scrolling the page.

--- a/style.css
+++ b/style.css
@@ -31,11 +31,14 @@ nav{
   width: 100%;
   justify-content: center;
   flex-wrap: wrap;
-
   /* these 2 lines makes the navbar stick to the top of the page when we
   scroll down. */
   position: sticky;
   top: 0;
+  /* Makes the navbar always on "top" when we scroll down (some elements
+  such as the top attraction image pages or the ifram video were overlaping
+  the navbar) */
+  z-index: 1000;
 }
 
 nav ul{
@@ -279,6 +282,8 @@ div #iframe {
   width: 100%;
   height: 100%;
 }
+
+
 
 /* containers for triple image in a line */
 
